# xrsps-native

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_win.bat
shaders/: model.frag  model.vert
src/: cache.cpp  cache.h  camera.cpp  camera.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  world.cpp  world.h
